--- a/Assignment/Client/BlazorApp/_Imports.razor
+++ b/Assignment/Client/BlazorApp/_Imports.razor
@@ -11,3 +11,7 @@
 @using ApiContracts
 @using BlazorApp.Auth
 @using BlazorApp.Services
+@using BlazorApp.Pages
+
+@using Microsoft.AspNetCore.Components.Authorization
+@using Microsoft.AspNetCore.Authorization
