--- a/Assignment/Client/BlazorApp/Layout/NavMenu.razor
+++ b/Assignment/Client/BlazorApp/Layout/NavMenu.razor
@@ -1,39 +1,38 @@
-﻿<div class="top-row ps-3 navbar navbar-dark">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="">BlazorApp</a>
-        <button title="Navigation menu" class="navbar-toggler" @onclick="ToggleNavMenu">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-    </div>
+﻿@using Microsoft.AspNetCore.Components.Authorization
+@inject IAuthService AuthService
+@inject NavigationManager Nav
+
+<div class="top-row ps-3 navbar navbar-dark">
+    <a class="navbar-brand" href="">AppSol</a>
+
+    <AuthorizeView>
+        <Authorized>
+            <span class="navbar-text me-3">
+                Hello, @context.User.Identity?.Name!
+            </span>
+            <button class="btn btn-outline-light btn-sm" @onclick="Logout">Logout</button>
+        </Authorized>
+        <NotAuthorized>
+            <a class="btn btn-outline-light btn-sm" href="/login">Login</a>
+        </NotAuthorized>
+    </AuthorizeView>
 </div>
 
-<div class="@NavMenuCssClass nav-scrollable" @onclick="ToggleNavMenu">
+<div class="nav-scroller">
     <nav class="nav flex-column">
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="" Match="NavLinkMatch.All">
-                <span class="bi bi-house-door-fill-nav-menu" aria-hidden="true"></span> Home
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="bi bi-plus-square-fill-nav-menu" aria-hidden="true"></span> Counter
-            </NavLink>
-        </div>
-        <div class="nav-item px-3">
-            <NavLink class="nav-link" href="weather">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
-            </NavLink>
-        </div>
+        <NavLink class="nav-link" href="/" Match="NavLinkMatch.All">
+            Posts
+        </NavLink>
+        <NavLink class="nav-link" href="/users">
+            Users
+        </NavLink>
     </nav>
 </div>
 
 @code {
-    private bool collapseNavMenu = true;
-
-    private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
-    private void ToggleNavMenu()
+    private async Task Logout()
     {
-        collapseNavMenu = !collapseNavMenu;
+        await AuthService.LogoutAsync();
+        Nav.NavigateTo("/");
     }
 }
